# JuLS-app

./: .dockerignore  .gitignore  Dockerfile  Manifest.toml  NOTICE  Project.toml  README.md  example_experiments.ipynb  zoo.ipynb
.github/workflows/: docker.yml
clients/: .gitignore  README.md  pyproject.toml
clients/examples/: async_job.py  concurrent_solves.py  solve_and_plot.py
clients/juls/: __init__.py  client.py  plotting.py  samples.py
clients/requirements/: requirements.in  requirements.txt
data/graph_coloring/: easy.json  hard.json  medium.json
data/knapsack/: easy.json  hard.json  medium.json
data/production_planning/: easy.json  hard.json  medium.json
data/ticket_pricing/: easy.json  hard.json  medium.json  tp_3_300
data/tsp/: easy.json  hard.json  medium.json
docs/src/api/: experiments.md
plotting/: Manifest.toml  Project.toml  README.md
plotting/src/: JuLSPlots.jl
plotting/test/: runtests.jl
server/: JuLSServer.jl  app.jl  build_sysimage.jl  jobs.jl  main.jl  metrics.jl  precompile.jl  run.jl
skills/: README.md
skills/juls-opt-problem-builder/: SKILL.md
skills/juls-opt-problem-builder/reference/: invariant-catalog.md  modeling-patterns.md  registration-checklist.md
skills/juls-opt-problem-builder/scripts/: smoke_test.sh
skills/juls-opt-problem-builder/templates/: experiment.jl.tmpl  model_dag.jl.tmpl  testitem.jl.tmpl  verify_problem.py.tmpl
src/: JuLS.jl
src/experiments/: data_loading.jl  experiments.jl
src/heuristics/: composite_heuristic.jl
src/model/: limit.jl  metrics.jl  model.jl  output.jl  solution.jl
(+51 files in other folders)
